tests/ui/no_constructors.stderr
error: Expected one constructor, found 0
 --> $DIR/no_constructors.rs:6:1
  |
6 | impl List {
  | ^^^^
