tests/ui/no_constructors.rs
use wonderbox::autoresolvable;

struct List;

#[autoresolvable]
impl List {
}

fn main() {}
